Adicionando algumas divisões do corpo do meu currículo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <title>Currículo</title>
 </head>
 <body>
+    <header>
+        <h1>Cleberte Rodrigues</h1>
+    </header>
+    <main>
+        <section id="sobre"></section>
+        <section id="conhecimentos"></section>
+        <section id="contatos"></section>
+    </main>
+    <footer>
+        <section id="redes-sociais"></section>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
